--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "0.0.0",
   "description": "Node ClojureScript Demo",
   "main": "index.js",
+  "cljs": {
+    "namespace": "node_cljs_demo.core"
+  },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "mustache": "~2.0.0"
   },
   "devDependencies": {
-    "source-map-support": "~0.2.10"
-},
+    "source-map-support": "~0.2.10",
+    "object-path": "~0.9.2"
+  },
   "scripts": {
-      "build": "./build.sh",
-      "cljs-repl": "scripts/repl"
+    "build:dev": "lein cljsbuild auto dev",
+    "build:release": "scripts/build.sh",
+    "cljs-repl": "scripts/repl"
   }
-
 }
